# duckdbX

./: README.md  duckdbx_python_library_with_docker_a50d2e04.plan.md  pyproject.toml  requirements.txt
docker/: Dockerfile  constraints.txt  requirements.txt
duckdbx/: __init__.py  config.py  container.py  core.py  exceptions.py
examples/: basic_test.py
